# flab-bada

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: github-actions.yaml  op-actions.yaml  test-actions.yaml
alembic/versions/: 31152dd66549_create_teacher_table.py  36104b3b9a54_create_letures_table.py  3942df77c862_drop_lectures_table.py  3f71a28d9893_add_foreign_key_in_lectures_table.py  8a207b511eac_add_role_in_users_table.py  d43197b3c81c_create_users_table.py
flab_bada/config/: config.py
flab_bada/controller/: controller.py
flab_bada/database/: database.py
flab_bada/domain/: __init__.py
flab_bada/domain/email/: email_container.py  email_controller.py  email_repository.py  email_service.py
flab_bada/domain/lecture/: lectures_controller.py  lectures_repository.py  lectures_service.py
flab_bada/domain/redis/: redis_client.py
flab_bada/domain/users/: user_controller.py  user_repository.py  user_service.py
flab_bada/loggin/: loggin.py
flab_bada/logging/: logging.py
flab_bada/models/: __init__.py  lectures.py  users.py
flab_bada/redis_client/: application.py  containers.py  redis.py
flab_bada/response/: ok_response.py
flab_bada/router/v1/: lectures.py
flab_bada/schemas/: lectures.py  response_schemas.py  users.py
flab_bada/users/: user_controller.py  user_repository.py  user_service.py
flab_bada/utils/: bcrypt.py
tests/: pytest.ini  test_hello_world.py
tests/domain/: test_email.py  test_lecture.py  test_redis_client.py  test_user.py
tests/domain/users/: test_user.py
tests/models/: test_lecture.py  test_users.py
tests/router/: test_router_lectures.py  test_router_users.py  test_users.py
tests/utils/: test_bcrypt.py
